2016-10-28  Marc A. Smith  <marc.smith@parodyne.com>

	updated a few more optional packages (gdb, valgrind, and strace); fix for ntpd to keep it from entering an endless loop; updated new path for the ip utility in the rc.network script

2016-10-27  Marc A. Smith  <marc.smith@parodyne.com>

	re-enabled the ib_qib driver; removed un-needed ib_srpt module option in modprobe.conf

	updated Linux to 4.9.0-rc2; updated the ZFS, SPL, and SCST packages to support the new Linux version; more build fixes from the recent round of package updates

2016-10-24  Marc A. Smith  <marc.smith@parodyne.com>

	more build dependency issues discovered, and fixed when using parallel make

2016-10-23  Marc A. Smith  <marc.smith@parodyne.com>

	updated just about every package that had a new version released; lots of build fixes/changes to go along with the new package versions; added the AUTHORS file to acknowledge the ESOS authors; added new packages libffi, ptyprocess, requests, openwsman, swig, and userspace-rcu, which are dependencies for the updated packages; misc documentation fixes in the root source directory; added the esos_host and esos_target variables so we can start enabling a cross-compiler configuration for packages

2016-10-18  Marc A. Smith  <marc.smith@parodyne.com>

	added the pkg_update.sh script to assist ESOS developers in updating packages

2016-10-15  Marc A. Smith  <marc.smith@parodyne.com>

	install/image fix for new GRUB version; added 'Wl,-nostdlib' to cc_base and cxx_base which should fix a lot of build compatibility issues

2016-10-14  Marc A. Smith  <marc.smith@parodyne.com>

	updated glibc, grub, parted, busybox, and valgrind to current stable/supported versions; several build fixes for new glibc version

2016-10-13  Marc A. Smith  <marc.smith@parodyne.com>

	updated GCC to version 4.7.4 and split GMP, MPFR, and now MPC into separate targets

2016-10-06  Marc A. Smith  <marc.smith@parodyne.com>
