@@ -158,9 +158,9 @@ extern "C" {
 #define SYNC_CONF_TOOL  "/usr/local/sbin/usb_sync.sh"
 #define MEGACLI_BIN     "/opt/sbin/MegaCli64"
 #define CHPASSWD_BIN    "/usr/sbin/chpasswd"
-#define ADDUSER_BIN     "/bin/adduser"
-#define DELUSER_BIN     "/bin/deluser"
-#define DELGROUP_BIN    "/bin/delgroup"
+#define ADDUSER_BIN     "/usr/sbin/adduser"
+#define DELUSER_BIN     "/usr/sbin/deluser"
+#define DELGROUP_BIN    "/usr/sbin/delgroup"
 #define RC_NETWORK      "/etc/rc.d/rc.network"
 #define SSMTP_BIN       "/usr/sbin/ssmtp"
 #define TAR_BIN         "/usr/bin/tar"
